crates/cuda-macros/tests/compile_fail/uncontracted_launch_requires_unsafe.stderr
error[E0133]: call to unsafe function `LoadedModule::uncontracted` is unsafe and requires unsafe block
  --> tests/compile_fail/uncontracted_launch_requires_unsafe.rs:20:5
   |
20 | /     module
21 | |         .uncontracted(
22 | |             stream,
23 | |             cuda_core::LaunchConfig {
...  |
28 | |             7,
29 | |         )
   | |_________^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
